--- a/foo.html
+++ b/foo.html
@@ -40,6 +40,6 @@
 				data-service-content-id="440457277850398720"
 				data-service-content-type="tweet"> </div>
 		</div>
-		<script src="http://devbox.spredfast.com/jmvc/widget/sf-widget.js"> </script>
+		<script src="http://qa17.spredfast.com/jmvc/widget/sf-widget.js"> </script>
 	</body>
 </html>
