fix some loading issues and add connect to test with

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 			 Create your own custom Modernizr build: www.modernizr.com/download/ -->
 	<script src="js/lib/modernizr-2.0.6.min.js"></script>
 
-	<link href="http://coderwall.com/stylesheets/jquery.coderwall.css" media="all" rel="stylesheet" type="text/css">
-
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -79,8 +77,8 @@
 			load: 'js/bin/global.min.js'
 		}]);
 	</script>
+	<script src="js/src/main.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script src="http://coderwall.com/javascripts/jquery.coderwall.js"></script>
-
 </body>
 </html>
