--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 		<ul>
 			<li><a href="http://github.com/iamnoah">my github page</a>. This is the good stuff.</li>
 			<li><a href="http://stackoverflow.com/users/12034/noah">my stackoverflow user page</a></li>
-			<li><a href="http://careers.stackoverflow.com/noahsloan">my cv</a>... but be warned that I'm very happy with my job.</li>
-			<li>My <a href="http://iamnoah.blogspot.com">defunct blog</a>.</li>
+			<li><a href="https://www.linkedin.com/in/noahsloan/">LinkedIn</a></li>
 		</ul>
 	</div>
 
@@ -51,12 +50,6 @@
 			<img src="http://stackexchange.com/users/flair/7042.png" width="208" height="58" alt="profile for noah on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for noah on Stack Exchange, a network of free, community-driven Q&amp;A sites">
 		</a>
 	</section>
-
-
-	<footer>
-		<p>I'm a developer, not a designer, and I'm lazy, so credit for this site goes mainly to
-		<a href="http://html5boilerplate.com/">HTML5 Boilerplate</a>.</p>
-	</footer>
 
 	<!-- JavaScript at the bottom for fast page loading -->
 	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
