--- a/noah.html
+++ b/noah.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>iamnoah.github.com</title>
+	<title>Noah</title>
 
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
@@ -30,27 +30,13 @@
 	<![endif]-->
 
 	<header>
-		<h1>iamnoah.github.com</h1>
+		<h1>Noah Sloan</h1>
 	</header>
 
-	<section class="coderwall" data-coderwall-username="iamnoah" data-coderwall-orientation="vertical"></section>
-
 	<div role="main" class="main">
-		<p>There is no real content here, just some notable links related to me:</p>
-		<ul>
-			<li><a href="http://github.com/iamnoah">my github page</a>. This is the good stuff.</li>
-			<li><a href="http://stackoverflow.com/users/12034/noah">my stackoverflow user page</a></li>
-			<li><a href="https://www.linkedin.com/in/noahsloan/">LinkedIn</a></li>
-			<li><a href="noah.html">Human Interest</a></li>
-		</ul>
+		<p>When I'm not coding, I like to spend time outside. I enjoy skating, bike rides, hiking, yoga, and working out. I also enjoy reading about science and various kinds of fiction, and try to meditate regularly.</p>
 	</div>
 
-
-	<section class="stack-exchange">
-		<a href="http://stackexchange.com/users/7042">
-			<img src="http://stackexchange.com/users/flair/7042.png" width="208" height="58" alt="profile for noah on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for noah on Stack Exchange, a network of free, community-driven Q&amp;A sites">
-		</a>
-	</section>
 
 	<!-- JavaScript at the bottom for fast page loading -->
 	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
